--- a/infra/package.json
+++ b/infra/package.json
@@ -32,21 +32,18 @@
         "build:lambda:java:database:aurora:migrator": "./functions/database/aurora/migrator/build-with-docker.sh"
     },
     "devDependencies": {
+        "@alma-cdk/openapix": "./demo-packages/openapix@0.1.0.jsii.tgz",
+        "@alma-cdk/project": "^0.0.18",
         "@almamedia-open-source/cdk-cross-region-parameter": "./demo-packages/cdk-cross-region-parameter@0.0.0.jsii.tgz",
-        "@almamedia-open-source/cdk-openapix": "./demo-packages/cdk-openapix@0.0.20.jsii.tgz",
-        "@almamedia-open-source/cdk-project-context": "0.0.19",
-        "@almamedia-open-source/cdk-project-names": "0.0.8",
-        "@almamedia-open-source/cdk-project-stack": "0.0.5",
-        "@almamedia-open-source/cdk-project-target": "0.0.10",
-        "@aws-sdk/client-sfn": "3.51.0",
+        "@aws-sdk/client-sfn": "3.171.0",
         "@types/aws-lambda": "^8.10.76",
-        "@types/jest": "^26.0.23",
+        "@types/jest": "^27.5.0",
         "@types/lodash": "^4.14.168",
         "@types/node": "14.17.4",
         "@types/test-console": "^1.1.0",
         "@typescript-eslint/eslint-plugin": "^5",
         "@typescript-eslint/parser": "^5",
-        "aws-cdk": "2.16.0",
+        "aws-cdk": "2.40.0",
         "aws-sdk-mock": "^5.1.0",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
@@ -57,7 +54,7 @@
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
         "husky": "^4.3.8",
-        "jest": "^26.6.3",
+        "jest": "^27.5.0",
         "lint-staged": "^10.5.3",
         "msw": "^0.36.5",
         "pg": "^8.7.1",
@@ -66,43 +63,38 @@
         "source-map-support": "^0.5.19",
         "test-console": "^2.0.0",
         "testcontainers": "^8.6.1",
-        "ts-jest": "^26.5.5",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.4.3"
+        "ts-jest": "^27.1.4",
+        "ts-node": "10.7.0",
+        "typescript": "4.6.4"
     },
     "peerDependencies": {
-        "aws-cdk-lib": "^2.11.0",
+        "aws-cdk-lib": "2.40.0",
         "constructs": "^10.0.0"
     },
     "dependencies": {
-        "@almamedia/ovipro-common-entities": "^0.1.21",
-        "@dazn/lambda-powertools-correlation-ids": "1.28.1",
-        "@dazn/lambda-powertools-logger": "1.28.1",
-        "@dazn/lambda-powertools-middleware-correlation-ids": "1.28.1",
+        "@almamedia/ovipro-common-entities": "^0.1.25",
+        "@aws-sdk/client-lambda": "3.171.0",
         "@middy/core": "2.4.0",
-        "@middy/http-error-handler": "2.2.0",
+        "@middy/http-header-normalizer": "2.2.0",
         "@middy/http-json-body-parser": "2.2.0",
-        "@middy/validator": "2.2.0",
         "@middy/util": "^2.4.3",
-        "@opensearch-project/opensearch": "^1.0.2",
+        "@middy/validator": "2.2.0",
         "@types/http-errors": "^1.8.0",
         "@types/uuid": "^8.3.0",
-        "aws-sdk": "^2.839.0",
+        "aws-cdk-lib": "2.40.0",
         "aws-xray-sdk": "^3.2.0",
         "axios": "^0.21.4",
+        "constructs": "^10.0.0",
         "http-errors": "^1.8.0",
         "jest-sonar-reporter": "^2.0.0",
         "json-colorizer": "^2.2.2",
-        "lambda-log": "^2.4.0",
         "lodash": "^4.17.21",
         "openapi-request-validator": "^9.0.0",
-        "typeorm": "0.2.37",
-        "typeorm-aurora-data-api-driver": "2.3.1",
-        "typeorm-naming-strategies": "2.0.0",
+        "typeorm": "0.3.7",
+        "typeorm-aurora-data-api-driver": "2.4.2",
+        "typeorm-naming-strategies": "4.1.0",
         "typescript-logging": "^1.0.0",
-        "uuid": "^8.3.2",
-        "aws-cdk-lib": "2.16.0",
-        "constructs": "^10.0.0"
+        "uuid": "^8.3.2"
     },
     "husky": {
         "hooks": {
@@ -110,6 +102,9 @@
         }
     },
     "lint-staged": {
-        "*.ts": ["npm run lint", "npm run prettier"]
+        "*.ts": [
+            "npm run lint",
+            "npm run prettier"
+        ]
     }
 }
